--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                         </div>
                         <div class="card-info">
                             <h3>Total Revenue</h3>
-                            <h2>25,450,000đ</h2>
-                            <p><span class="text-success">+12%</span> from last month</p>
+                            <h2>10đ</h2>
+                            <p><span class="text-success">+0%</span> from last month</p>
                         </div>
                     </div>
                     
@@ -106,7 +106,7 @@
                         </div>
                         <div class="card-info">
                             <h3>Total Customers</h3>
-                            <h2>1,248</h2>
+                            <h2>12</h2>
                             <p><span class="text-success">+8%</span> from last month</p>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                         </div>
                         <div class="card-info">
                             <h3>Today's Bookings</h3>
-                            <h2>24</h2>
+                            <h2>0</h2>
                             <p><span class="text-danger">-2</span> from yesterday</p>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                                     <td>#BK-10245</td>
                                     <td>
                                         <img src="https://randomuser.me/api/portraits/women/32.jpg" alt="User">
-                                        Nguyễn Thị A
+                                        Nguyễn Thị Anh
                                     </td>
                                     <td>Trần Thị B</td>
                                     <td>Gel Nails</td>
@@ -190,9 +190,9 @@
                                     <td>#BK-10244</td>
                                     <td>
                                         <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="User">
-                                        Phạm Văn C
+                                        Phạm Văn Cường
                                     </td>
-                                    <td>Lê Thị D</td>
+                                    <td>Lê Thị Dương</td>
                                     <td>Manicure</td>
                                     <td>15/07/2023, 11:30</td>
                                     <td><span class="status in-progress">In Progress</span></td>
@@ -201,9 +201,9 @@
                                     <td>#BK-10243</td>
                                     <td>
                                         <img src="https://randomuser.me/api/portraits/women/67.jpg" alt="User">
-                                        Hoàng Thị E
+                                        Hoàng Thị Bé
                                     </td>
-                                    <td>Nguyễn Thị F</td>
+                                    <td>Nguyễn Thị Linh</td>
                                     <td>Pedicure</td>
                                     <td>15/07/2023, 10:00</td>
                                     <td><span class="status completed">Completed</span></td>
@@ -214,7 +214,7 @@
                                         <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="User">
                                         Vũ Văn G
                                     </td>
-                                    <td>Đặng Thị H</td>
+                                    <td>Đặng Thị Trang</td>
                                     <td>Nail Art</td>
                                     <td>14/07/2023, 16:30</td>
                                     <td><span class="status pending">Pending</span></td>
@@ -223,7 +223,7 @@
                                     <td>#BK-10241</td>
                                     <td>
                                         <img src="https://randomuser.me/api/portraits/women/89.jpg" alt="User">
-                                        Lý Thị K
+                                        Lý Thị Khánh
                                     </td>
                                     <td>Trần Thị B</td>
                                     <td>Acrylic Nails</td>
